# jinja-filters

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  tasks.py
pelican/plugins/jinja_filters/: __init__.py  jinja_filters.py
test/: test_breaking_spaces.py  test_unwrap_links.py  test_unwrap_tag.py
